--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     "hmr": "ng serve --configuration hmr",
     "build": "ng build --prod",
     "build:ci": "ng build -c ci ",
-    "test": "cross-env TZ=America/Sao_Paulo jest --no-cache",
+    "test": "cross-env NODE_ICU_DATA=node_modules/full-icu TZ=America/Sao_Paulo jest --no-cache",
     "test:snapshot": "npm run test -- --coverage -u",
     "test:watch": "npm run test -- --watch",
     "test:ci": "npm run test -- -ci --runInBand --coverage",
     "lint": "ng lint",
-    "e2e": "cypress open",
-    "e2e:ci": "cypress run"
+    "apis": "json-server --watch mocks/db.json",
+    "compodoc": "npx compodoc -p tsconfig.app.json",
+    "e2e": "cypress open --config-file cypress/support/cypress-env.json",
+    "prepush:husky": "npm run lint && npm test && npm run build:ci",
+    "e2e:ci": "cypress run --config-file cypress/support/cypress-env.json"
   },
   "jest": {
     "preset": "jest-preset-angular",
@@ -46,6 +49,9 @@
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
+    "bootstrap": "^4.4.1",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.16.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
@@ -64,6 +70,7 @@
     "codelyzer": "^5.0.0",
     "cross-env": "^5.2.0",
     "cypress": "^3.4.0",
+    "full-icu": "^1.3.0",
     "husky": "^3.0.1",
     "jest": "^24.8.0",
     "jest-createspyobj": "^1.2.2",
