--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -10,6 +10,7 @@
   "exclude": [
     "test.ts",
     "**/*.spec.ts",
-    "./jestGlobalMocks.ts"
+    "./jestGlobalMocks.ts",
+    ".src/testing/**"
   ]
 }
