--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@angular/router": "~8.1.2",
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
+    "ngx-mask": "^8.1.7",
     "popper.js": "^1.16.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
