--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test:snapshot": "npm run test -- --coverage -u",
     "test:watch": "npm run test -- --watch",
     "test:ci": "npm run test -- -ci --runInBand --coverage",
-    "lint": "ng lint",
+    "lint": "eslint 'src/**/*.ts'",
     "apis": "json-server --watch mocks/db.json",
     "compodoc": "npx compodoc -p tsconfig.app.json",
     "e2e": "cypress open --config-file cypress/support/cypress-env.json",
@@ -66,19 +66,27 @@
     "@cypress/webpack-preprocessor": "^4.1.0",
     "@types/jest": "^24.0.15",
     "@types/node": "^12.6.8",
+    "@typescript-eslint/eslint-plugin": "^2.19.0",
+    "@typescript-eslint/parser": "^2.19.0",
     "angular2-template-loader": "^0.6.2",
     "babel-preset-env": "^1.7.0",
     "codelyzer": "^5.0.0",
     "cross-env": "^5.2.0",
     "cypress": "^3.4.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-import-helpers": "^1.0.2",
+    "eslint-plugin-prettier": "^3.1.2",
     "full-icu": "^1.3.0",
     "husky": "^3.0.1",
     "jest": "^24.8.0",
     "jest-createspyobj": "^1.2.2",
     "jest-preset-angular": "^7.1.1",
+    "prettier": "^1.19.1",
     "ts-loader": "^6.0.4",
     "ts-node": "~7.0.0",
-    "tslint": "~5.15.0",
     "typescript": "~3.4.3",
     "webpack-cli": "^3.1.0"
   }
