--- a/package.json
+++ b/package.json
@@ -40,6 +40,11 @@
     }
   },
   "private": true,
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
   "dependencies": {
     "@angular/animations": "~8.1.2",
     "@angular/common": "~8.1.2",
@@ -63,6 +68,8 @@
     "@angular/compiler-cli": "~8.1.2",
     "@angular/language-service": "~8.1.2",
     "@angularclass/hmr": "^2.1.3",
+    "@commitlint/cli": "^8.3.5",
+    "@commitlint/config-conventional": "^8.3.4",
     "@cypress/webpack-preprocessor": "^4.1.0",
     "@types/jest": "^24.0.15",
     "@types/node": "^12.6.8",
